# inclusive_diffraction

./: .gitignore  CMakeLists.txt  Makefile  Makefile.poyta  filelist.m
src/: CMakeLists.txt  inclusive_diffraction.cpp  inclusive_diffraction.hpp  main.cpp  qqg.cpp
